--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,17 @@
 
 @layer components{
   .square{
-    @apply hover:shadow-lg hover:border-green-300 border border-gray-500 shadow-md rounded-md w-full p-[33%] flex items-center justify-center text-xl font-sans font-bold
+    @apply hover:shadow-lg hover:border-green-300 border border-gray-500 shadow-md rounded-md w-full p-[33%] flex items-center justify-center text-2xl font-sans font-bold
   }
+  
+}
+.shake{
+  animation: shake 400ms ease-in-out;
+}
+@keyframes shake{
+  10%,90%{transform:translate3d(-1px,0,0);}
+  20%,80%{transform:translate3d(+2px,0,0);}
+  30%,70%{transform:translate3d(-4px,0,0);}
+  40%,60%{transform:translate3d(+4px,0,0);}
+  50%{transform:translate3d(-4px,0,0);}
 }
